--- a/Lab/Lab 3/lab03.Rmd
+++ b/Lab/Lab 3/lab03.Rmd
@@ -3,6 +3,7 @@ title: "Lab 03 - Classification"
 author: "Ken Ye"
 date: "9/13/2023"
 output:
+  pdf_document: default
   html_document:
     df_print: paged
 ---
